# hanoi-rainbow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAINFRAME_MODERNIZATION_PROPOSAL.md  README.md  SUPPORT.md  cspell.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
agent-commands/: design-e2e-test.md  specify.md  taskify.md
agent-commands/templates-for-commands/: design-template.md
agents/: batch-modernization-engineer.md  business-analyst.md  cobol-translator.md  data-migration-engineer.md  devops-engineer.md  legacy-analyst.md  mainframe-architect.md  mainframe-tester.md  product-owner.md  qa-engineer.md  scrum-master.md  security-engineer.md  software-engineer.md  system-architect.md  technical-leader.md  technical-writer.md  ux-ui-designer.md
commands/: analyze.md  architect.md  assess-context.md  assess-legacy.md  checklist.md  clarify.md  convert-batch.md  design-data-migration.md  design-e2e-test.md  design-screen-migration.md  design.md  implement.md  map-business-logic.md  perform-e2e-test.md  plan-strangler.md  regulate.md  specify.md  standardize.md  taskify.md  tasks-to-ado.md  validate-modernization.md
docs/: README.md  brownfield-workflow.md  docfx.json  greenfield-workflow.md  index.md  installation.md  legacy-migration-workflow.md  legacy-modernization-workflow.md  local-development.md  quickstart.md  upgrade.md  workflows.md
rules/: agent-skills-creation-rules.md  agent-skills-folder-mapping.md  agents-creation-rules.md  agents-folder-mapping.md
(+329 files in other folders)
