[project]
name = "rainbow-cli"
version = "0.1.0"
description = "Rainbow CLI, part of Hanoi Rainbow Project. A framework to develop your project with Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
rainbow = "rainbow_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rainbow_cli"]

